@@ -4,7 +4,7 @@
 # John Jacobsen, NPX Designs, Inc., jacobsen\@npxdesigns.com
 # Started: Fri Aug 13 08:38:05 2004
 
-my $Id = "Id"; my $id = "$Id: moat,v 1.2 2005-03-15 22:23:17 jacobsen Exp $x";
+my $Id = "Id"; my $id = "$Id: moat,v 1.3 2005-04-20 21:17:53 jacobsen Exp $x";
 
 package MY_PACKAGE;
 use strict;
@@ -18,23 +18,26 @@ my $cbsecs   = 10 * 60;  # 10 min
 my $savtsecs = 0;
 my $skipmjb;
 my $fixsingle;
+my $loopback = 0;
 
 sub usage { return <<EOF;
 Usage: $0  [<dom>] ....         <dom> is e.g., 00a.  Repeatable.
            [-h|-help]           Show these options
 	   [-n <N>]             Number of times to perform all tests (default=1)
 	   [-d|-dorfreq <MHz>]  Specify DOR clock frequency
+	   [-g|-testgps]        Test GPS functions as part of stagedtests (10 MHz only!)
+	   [-f|-fixsingle]      Single packet length for stagedtests initial
+	                        echo test (default: random)
+	   [-X|-loopback]       Skip check on prompt for iceboot (for loopback firmware)
+           [-s|-skipmjb]        Skip MJB test 
+	   [-k|-kill]           Kill all test processes
+
 	   [-c|-cbsecs]         Number of seconds for configboot stagedtests runs 
 	                        (default $cbsecs)
-	   [-g|-testgps]        Test GPS functions as part of stagedtests (10 MHz only!)
 	   [-r|-relsecs]        Number of seconds for "release" stagedtests runs
 	                        (default $relsecs)
 	   [-t|-savetsecs]      Number of seconds for same, saving tcal data
 	                        (default $savtsecs)
-	   [-f|-fixsingle]      Single packet length for stagedtests initial
-	                        echo test (default: random)
-           [-s|-skipmjb]        Skip MJB test 
-	   [-k|-kill]           Kill all test processes
 
 EOF
 ;
@@ -56,9 +59,18 @@ GetOptions("help|h"          => \$help,
 	   "exclude|e=s"     => \@exclude,
 	   "savetsecs|t=i"   => \$savtsecs,
 	   "fixsingle|f=i"   => \$fixsingle,
+	   "loopback|x"      => \$loopback,
 	   "kill|k"          => \$kill,
 	   "n=i"             => \$n) || die usage;
+
 die usage if $help;
+$loopback = 1 if defined $loopback;
+if($loopback && ($savtsecs !=0 || $relsecs !=0)) {
+    die "Tcalib operations not supported w/ loopback firmware.\n"
+	."Use -c (configboot) test with loopback.\n";
+}
+
+
 
 my @doms = @ARGV;
 my $cmdline_doms = scalar @doms;
@@ -151,7 +163,7 @@ for(my $iter=0; $iter<$n; $iter++) {
 	unlink "st.out" || mydie "Can't unlink st.out: $!\n";
 	open ST, ">st.in"; print ST $st_in; close ST;
 	my $stcmd = "/usr/local/bin/stagedtests.pl -b -t $cbsecs -x -d $dorfreq $fsarg "
-	    ."$gpsflag -s ".(defined $st_in ? "st.in" : "-p");
+	    ."$gpsflag -s ".(defined $st_in ? "st.in" : "-p").($loopback?" -X ":"");
 	print LOG "\n\nMOAT: Starting $stcmd\n";
 	system "$stcmd 2>&1 > st.out";
 	my $stresult = `tail -1 st.out`;
@@ -174,7 +186,7 @@ for(my $iter=0; $iter<$n; $iter++) {
 	unlink "st.out" || mydie "Can't unlink st.out: $!\n";
         open ST, ">st.in"; print ST $st_in; close ST;
 	my $stcmd = "/usr/local/bin/stagedtests.pl -t $savtsecs -v -d $dorfreq $fsarg $gpsflag "
-	    .(defined $st_in ? "st.in" : "-p");
+	    .(defined $st_in ? "st.in" : "-p").($loopback?" -X ":"");
 	print LOG "\n\nMOAT: Starting $stcmd\n";
 	system "$stcmd 2>&1 > st.out";
 	my $stresult = `tail -1 st.out`;
@@ -196,7 +208,7 @@ for(my $iter=0; $iter<$n; $iter++) {
 	unlink "st.out" || mydie "Can't unlink st.out: $!\n";
         open ST, ">st.in"; print ST $st_in; close ST;
 	my $stcmd = "/usr/local/bin/stagedtests.pl -t $relsecs -d $dorfreq $fsarg $gpsflag "
-	    .(defined $st_in ? "st.in" : "-p");
+	    .(defined $st_in ? "st.in" : "-p").($loopback?" -X ":"");
 	print LOG "\n\nMOAT: Starting $stcmd\n";
 	system "$stcmd 2>&1 > st.out";
 	my $stresult = `tail -1 st.out`;
